edgevox-onnx/c-api/c-api.h

/**
 * @brief Configuration for offline speaker diarization.
 *
 * Example based on `offline-sepaker-diarization-c-api.c`:
 *
 * @code
 * EdgevoxOnnxOfflineSpeakerDiarizationConfig config;
 * memset(&config, 0, sizeof(config));
 * config.segmentation.pyannote.model =
 *     "./edgevox-onnx-pyannote-segmentation-3-0/model.onnx";
 * config.embedding.model =
 *     "./3dspeaker_speech_eres2net_base_sv_zh-cn_3dspeaker_16k.onnx";
 * config.clustering.num_clusters = 4;
 * @endcode
 */
typedef struct EdgevoxOnnxOfflineSpeakerDiarizationConfig {
  /** Speaker segmentation model configuration. */
  EdgevoxOnnxOfflineSpeakerSegmentationModelConfig segmentation;
  /** Speaker embedding extractor configuration. */
  EdgevoxOnnxSpeakerEmbeddingExtractorConfig embedding;
  /** Clustering configuration. */
  EdgevoxOnnxFastClusteringConfig clustering;
  /** Segments shorter than this duration in seconds are discarded. */
  float min_duration_on;
  /** Small gaps shorter than this duration in seconds may be merged. */
  float min_duration_off;
} EdgevoxOnnxOfflineSpeakerDiarizationConfig;
/** @brief Opaque offline speaker diarization handle. */
typedef struct EdgevoxOnnxOfflineSpeakerDiarization
    EdgevoxOnnxOfflineSpeakerDiarization;
/**
 * @brief Create an offline speaker diarization pipeline.
 *
 * @param config Offline speaker diarization configuration.
 * @return A newly allocated diarizer on success, or NULL on error. Free it
 *         with EdgevoxOnnxDestroyOfflineSpeakerDiarization().
 * @see EdgevoxOnnxDestroyOfflineSpeakerDiarization
 */
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineSpeakerDiarization *
EdgevoxOnnxCreateOfflineSpeakerDiarization(
    const EdgevoxOnnxOfflineSpeakerDiarizationConfig *config);
/**
 * @brief Destroy an offline speaker diarizer.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOfflineSpeakerDiarization().
 * @see EdgevoxOnnxCreateOfflineSpeakerDiarization
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflineSpeakerDiarization(
    const EdgevoxOnnxOfflineSpeakerDiarization *sd);
/**
 * @brief Return the expected input sample rate.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOfflineSpeakerDiarization().
 * @return Required input sample rate in Hz.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOfflineSpeakerDiarizationGetSampleRate(
    const EdgevoxOnnxOfflineSpeakerDiarization *sd);
/**
 * @brief Update clustering-related settings of an existing diarizer.
 *
 * Only `config->clustering` is used. Other fields are ignored.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOfflineSpeakerDiarization().
 * @param config Configuration whose `clustering` field will be applied.
 */
EDGEVOX_ONNX_API void EdgevoxOnnxOfflineSpeakerDiarizationSetConfig(
    const EdgevoxOnnxOfflineSpeakerDiarization *sd,
    const EdgevoxOnnxOfflineSpeakerDiarizationConfig *config);
/** @brief Opaque offline speaker diarization result. */
typedef struct EdgevoxOnnxOfflineSpeakerDiarizationResult
    EdgevoxOnnxOfflineSpeakerDiarizationResult;
/**
 * @brief One diarization segment.
 */
typedef struct EdgevoxOnnxOfflineSpeakerDiarizationSegment {
  /** Segment start time in seconds. */
  float start;
  /** Segment end time in seconds. */
  float end;
  /** Speaker label, typically an integer cluster ID. */
  int32_t speaker;
} EdgevoxOnnxOfflineSpeakerDiarizationSegment;
/**
 * @brief Return the number of speakers in a diarization result.
 *
 * @param r A pointer returned by one of the
 *          EdgevoxOnnxOfflineSpeakerDiarizationProcess*() functions.
 * @return Number of speaker clusters.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOfflineSpeakerDiarizationResultGetNumSpeakers(
    const EdgevoxOnnxOfflineSpeakerDiarizationResult *r);
/**
 * @brief Return the number of diarization segments.
 *
 * @param r A pointer returned by one of the
 *          EdgevoxOnnxOfflineSpeakerDiarizationProcess*() functions.
 * @return Number of segments.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOfflineSpeakerDiarizationResultGetNumSegments(
    const EdgevoxOnnxOfflineSpeakerDiarizationResult *r);
/**
 * @brief Return segments sorted by start time.
 *
 * The returned array contains exactly
 * EdgevoxOnnxOfflineSpeakerDiarizationResultGetNumSegments() entries.
 *
 * @param r A pointer returned by one of the
 *          EdgevoxOnnxOfflineSpeakerDiarizationProcess*() functions.
 * @return A newly allocated segment array. Free it with
 *         EdgevoxOnnxOfflineSpeakerDiarizationDestroySegment().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineSpeakerDiarizationSegment *
EdgevoxOnnxOfflineSpeakerDiarizationResultSortByStartTime(
    const EdgevoxOnnxOfflineSpeakerDiarizationResult *r);
/**
 * @brief Destroy a segment array returned by
 * EdgevoxOnnxOfflineSpeakerDiarizationResultSortByStartTime().
 *
 * @param s A pointer returned by
 *          EdgevoxOnnxOfflineSpeakerDiarizationResultSortByStartTime().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxOfflineSpeakerDiarizationDestroySegment(
    const EdgevoxOnnxOfflineSpeakerDiarizationSegment *s);
/**
 * @brief Run offline speaker diarization.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOfflineSpeakerDiarization().
 * @param samples Input mono PCM samples normalized to [-1, 1].
 * @param n Number of input samples.
 * @return A newly allocated diarization result. Free it with
 *         EdgevoxOnnxOfflineSpeakerDiarizationDestroyResult().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineSpeakerDiarizationResult *
EdgevoxOnnxOfflineSpeakerDiarizationProcess(
    const EdgevoxOnnxOfflineSpeakerDiarization *sd, const float *samples,
    int32_t n);
/**
 * @brief Destroy a diarization result.
 *
 * @param r A pointer returned by one of the
 *          EdgevoxOnnxOfflineSpeakerDiarizationProcess*() functions.
 */
EDGEVOX_ONNX_API void EdgevoxOnnxOfflineSpeakerDiarizationDestroyResult(
    const EdgevoxOnnxOfflineSpeakerDiarizationResult *r);