edgevox-onnx/c-api/cxx-api.h

// ============================================================================
// Speaker Embedding Extractor
// ============================================================================

/** @brief Configuration for speaker embedding extraction. */
struct SpeakerEmbeddingExtractorConfig {
  /** Speaker embedding model file. */
  std::string model;
  /** Number of inference threads. */
  int32_t num_threads = 1;
  /** Enable verbose debug logging. */
  bool debug = false;
  /** Execution provider such as `"cpu"`. */
  std::string provider = "cpu";
};
// ============================================================================
// Offline Speaker Diarization
// ============================================================================

/** @brief Pyannote segmentation model configuration. */
struct OfflineSpeakerSegmentationPyannoteModelConfig {
  /** Segmentation model filename. */
  std::string model;
};
/** @brief Segmentation model configuration for offline speaker diarization. */
struct OfflineSpeakerSegmentationModelConfig {
  /** Pyannote segmentation model configuration. */
  OfflineSpeakerSegmentationPyannoteModelConfig pyannote;
  /** Number of inference threads. */
  int32_t num_threads = 1;
  /** Enable verbose debug logging. */
  bool debug = false;
  /** Execution provider such as `"cpu"`. */
  std::string provider = "cpu";
};
/** @brief Fast clustering configuration. */
struct FastClusteringConfig {
  /** Known number of speakers. If > 0, threshold-based clustering is bypassed.
   */
  int32_t num_clusters = 0;
  /** Distance threshold used when the number of speakers is unknown. */
  float threshold = 0.5;
};
/** @brief Configuration for offline speaker diarization. */
struct OfflineSpeakerDiarizationConfig {
  /** Speaker segmentation model configuration. */
  OfflineSpeakerSegmentationModelConfig segmentation;
  /** Speaker embedding extractor configuration. */
  SpeakerEmbeddingExtractorConfig embedding;
  /** Clustering configuration. */
  FastClusteringConfig clustering;
  /** Segments shorter than this duration in seconds are discarded. */
  float min_duration_on = 0;
  /** Small gaps shorter than this duration in seconds may be merged. */
  float min_duration_off = 0;
};
/** @brief One diarization segment. */
struct OfflineSpeakerDiarizationSegment {
  /** Segment start time in seconds. */
  float start;
  /** Segment end time in seconds. */
  float end;
  /** Speaker label, typically an integer cluster ID. */
  int32_t speaker;
};